Fix front slider overflow issue

--- a/_sass/_frontpage.scss
+++ b/_sass/_frontpage.scss
@@ -42,7 +42,7 @@ div._2lqh {
                 background-color: rgba(255, 255, 255, 0.849);
                 max-width: 700px;
                 padding: 40px;
-                height: 300px;
+                
 
                 h1 {
                     margin-bottom: 30px;
